--- a/src/components/movieList/MovieList.css
+++ b/src/components/movieList/MovieList.css
@@ -1,14 +1,14 @@
-.movie__list {
+/* .movie__list {
     padding: 0 3rem 3rem 3rem;
-}
+} */
 
 .list__title {
 font-size: 1.75rem;
 margin:  2.5rem;
 }
-
+/* 
 .list__cards {
     display: flex;
     flex-wrap: wrap ;
     justify-content: center;
-}
+} */
