--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,45 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply font-body;
+  }
+}
 
+.swiper-button-next,
+.swiper-button-prev {
+  @apply translate-x-0  border-white bg-black/30 border rounded px-6 py-8 m-0;
+}
+.swiper-button-prev {
+  @apply !left-0;
+}
+.swiper-button-next {
+  @apply !right-0;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  @apply !text-xl !font-bold text-white  hover:text-amber-400;
+}
 .w-96 {
   width: 53rem;
 }
-
+.grad {
+  background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 1));
+}
+/* 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
