--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.class1 {
+  background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
+  display: block;
+  width: 100%;
+  height: 44px;
+ 
+  background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
+  /* z-index: 1; */
+  content: "";
+}
